Revision history for Log-Abstraction

0.19
	Bump minimum version of Sys::Syslog

0.18	Fri Jun  6 15:52:27 EDT 2025
	Fix level testing

0.17	Thu May 22 14:21:14 EDT 2025
	Added the messages() method

0.16	Thu May 22 07:40:24 EDT 2025
	Handle upper case levels, such as 'INFO'

0.15	Tue May 20 21:10:23 EDT 2025
	No need to create a Log::Log4perl when sending output to a file

0.14	Tue May 20 07:44:19 EDT 2025
	Adjusted minimum version of Config::Abstraction.
		It should be 0.19 in terms of testing but it's best to use the fixes in 0.25
		RT#165420 - ANDK
	Added 'array' to the logger hash
	Introduced 'level' - minimum level to log at, defaults to 'warn'
	Fixed where to log bugs
	Check and untaint the filename

0.13	Wed May 14 08:30:53 EDT 2025
	Use '>' after level rather than ':' to files, like lower level loggers
	Try not to put the name of this package in the logfiles,
		it adds nothing apart from disc usage
	Block setting logger => Log::Abstraction in new()
	Croak if we don't know how to handle a message

0.12	Fri May  9 07:42:35 EDT 2025
	Added the file parameter, so that both file and syslog can now be given,
		and file can be read in from a configuration file
	Added the fd descriptor - a file descriptor to log to
	Added separators between fields in file output

0.11	Wed May  7 15:37:37 EDT 2025
	Fixed calling can() on an unblessed variable
	Honour carp_on_warn when syslog is set

0.10	Tue May  6 20:43:48 EDT 2025
	Added carp_on_warn

0.09	Tue May  6 08:15:36 EDT 2025
	If no logger is given, use Log4perl

0.08	Mon May  5 11:39:58 EDT 2025
	Use Config::Abstraction instead of Config::Auto
	Guess the value if script_name if it's not given

0.07	Mon Mar 24 08:36:01 EDT 2025
	Handle "Socket operation on non-socket" on Solaris
	Calling new on an object now returns a clone rather than setting the defaults in the new object

0.06	Wed Mar 12 13:23:24 EDT 2025
	Don't put spaces between elements of an array

0.05	Tue Mar 11 14:10:10 EDT 2025