@@ -2,6 +2,7 @@ Revision history for Log-Abstraction
 
 0.19
 	Bump minimum version of Sys::Syslog
+	More untaint checking
 
 0.18	Fri Jun  6 15:52:27 EDT 2025
 	Fix level testing
